# backofficetool

./: CHANGELOG.md  Dockerfile.txt  README.md  app.py  config.py  init-db-job.yaml  init_db.py  models.py  pyproject.toml  requirements.txt  start.sh
instance/: backoffice.db
static/: styles.css
templates/: admin_settings.html  alterar_senha.html  base.html  calcular_multa.html  consulta_cnpj.html  correcao_valores.html  login.html  logs.html  manage_users.html  menu.html  meu_perfil.html  monitor_juridico.html  principal.html  register.html  resultado_multa.html  sla_dashboard.html
templates/errors/: 403.html  404.html  500.html
uploads/: Situacao_do_Workflow.xlsx
utils/: auth.py  dias_uteis.py  excel_export.py  file_processing.py  pdf_generator.py  value_correction.py
