[tool.poetry]
name = "backoffice-tools" 
version = "0.1.0"
description = "Backoffice Tools Application"
authors = ["Augusto Nascimento <augusto.nascimentto2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

pandas = "^2.2.0" 
numpy = "^1.26.0"            
flask = "2.3.2"
flask-sqlalchemy = "3.0.3"
flask-wtf = "1.2.2"
flask-migrate = "4.1.0"
openpyxl = "3.1.2"
python-dotenv = "1.0.0"
werkzeug = "2.3.6"
fpdf2 = "2.7.4"
gunicorn = "20.1.0"
requests = "2.31.0"
xlsxwriter = "3.0.3"
pytz = "^2024.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"